# project-eulust

./: Cargo.toml  README.md
src/: main.rs  solution.rs
src/solution/: p1.rs  p15.rs  p16.rs  p17.rs  p18.rs  p2.rs  p20.rs  p8.rs
